# NDI-Video-Sender_Receiver

./: .gitignore  Installation manual(Ubuntu).md  Installation manual(Windows).md  Installation manual.md  LICENSE  README.md
Makefile/: Makefile  Makefile.proj
NDI-Video-Receiver/: .gitignore  CMakeLists.txt  NDI-Video-Receiver.sln  NDI-Video-Receiver.vcxproj  NdiCom.cpp  NdiVideoReceiver.config  NdiVideoReceiver.cpp
NDI-Video-Receiver/NDI-Video-Receiver/: CMakeLists.txt  ConfigRead.cpp  ConfigRead.h  NDI-Video-Receiver.vcxproj  NDI-Video-Receiver.vcxproj.filters  NdiCom.cpp  NdiCom.h  NdiVideoReceiver.cpp
NDI-Video-Sender/: CMakeLists.txt  ConfigRead.cpp  ConfigRead.h  NDI-Switch-Sender.cpp  NDISender.cpp  NDISender.h  NdiVideoSender.config  Realsense.cpp  Realsense.h  USBCamera.cpp  USBCamera.h  VideoSource.h  VideoSourceManager.cpp  VideoSourceManager.h
NDI-Video-Sender/NDI-Video-Sender/: ConfigRead.cpp  ConfigRead.h  NDI-Video-Sender.vcxproj  NDI-Video-Sender.vcxproj.filters  NdiCom.cpp  NdiCom.h  NdiVideoSender.config  NdiVideoSender.cpp
NDI-Video-Sender2.15/NDI-Video-Sender/: ConfigRead.h  NDI-Video-Sender.vcxproj  NdiCom.cpp  NdiCom.h  NdiVideoSender.config  Realsense.cpp  Realsense.h
NDI-Video-Sender2.16/: NDI-Video-Sender.sln
NDI-Video-Sender2.16/NDI-Video-Sender/: CMakeLists.txt  ConfigRead.cpp  ConfigRead.h  NDI-Switch-Sender.cpp  NDI-Video-Sender.vcxproj  NDI-Video-Sender.vcxproj.filters  NDISender.cpp  NDISender.h  NdiCom.cpp  NdiCom.h  NdiVideoSender.config  NdiVideoSender.cpp  Realsense.cpp  Realsense.h  USBCamera.cpp  USBCamera.h  VideoSource.cpp  VideoSource.h  VideoSourceManager.cpp  VideoSourceManager.h
